[workspace]
resolver = "2"

members = [
	"ghx_proc_gen", # Lib
	"examples",     # Lib examples

	"bevy_ghx_proc_gen", # Bevy plugin
	"bevy_examples",     # Bevy plugin examples
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
