[package]
name = "bevy_examples"
version = "0.1.0"
publish = false
edition = "2021"
exclude = ["assets/"]

[dependencies]
bevy_ghx_proc_gen = { path = "../bevy_ghx_proc_gen" }

tracing-subscriber = "0.3.18"
bevy = { version = "0.12.0", default-features = false, features = [
	# Default features:

	"multi-threaded",     # Run with multithreading
	"bevy_asset",         # Assets management
	"bevy_scene",         # Scenes management
	"bevy_render",        # Rendering framework core
	"bevy_core_pipeline", # Common rendering abstractions
	"bevy_sprite",        # 2D (sprites) rendering
	"bevy_pbr",           # 3D (physically-based) rendering
	"bevy_gltf",          # GLTF 3D assets format support
	"bevy_text",          # Text/font rendering
	"bevy_ui",            # UI toolkit
	"tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)
	"default_font",       # Embed a minimal default font for text/UI

	# File formats:
	"png", # PNG image format for simple 2D images

	# Platform-specific:
	"x11", # Linux: Support X11 windowing system

	# Non-default features:

	# Platform-specific:
	"wayland", # (Linux) Support Wayland windowing system

	# Development/Debug features:
	"dynamic_linking", # Dynamic linking for faster compile-times
] }

[[example]]
name = "bevy-checkerboard"
path = "checkerboard/checkerboard.rs"

[[example]]
name = "tile-layers"
path = "tile-layers/tile-layers.rs"

[[example]]
name = "pillars"
path = "pillars/pillars.rs"

[[example]]
name = "canyon"
path = "canyon/canyon.rs"
