[package]
name = "bevy_examples"
version = "0.1.0"
publish = false
edition = "2021"
exclude = ["assets/"]

[dependencies]
# ----- Internal dependencies
bevy_ghx_proc_gen = { path = "../bevy_ghx_proc_gen", default-features = true }
bevy_editor_cam = { version = "0.7.0" }

# ----- External dependencies
tracing-subscriber = "0.3.18"
rand = "0.8.5"
bevy = { version = "0.17", default-features = false, features = [
	# Default features:

	"multi_threaded",              # Run with multithreading
	"bevy_asset",                  # Assets management
	"bevy_scene",                  # Scenes management
	"bevy_render",                 # Rendering framework core
	"bevy_core_pipeline",          # Common rendering abstractions
	"bevy_sprite",                 # 2D (sprites)
	"bevy_sprite_render",          # 2D (sprites) rendering
	"bevy_pbr",                    # 3D (physically-based) rendering
	"bevy_gltf",                   # GLTF 3D assets format support
	"bevy_mesh_picking_backend",   # Provides an implementation for picking meshes
	"bevy_sprite_picking_backend", # Provides an implementation for picking sprites
	"bevy_text",                   # Text/font rendering
	"bevy_ui",                     # UI toolkit
	"bevy_ui_render",              # UI rendering
	"bevy_window",                 # Windowing layer
	"tonemapping_luts",            # Support different camera Tonemapping modes (enables KTX2+zstd)
	"default_font",                # Embed a minimal default font for text/UI
	"reflect_auto_register",

	# File formats:
	"png", # PNG image format for simple 2D images

	# Platform-specific:
	"x11", # Linux: Support X11 windowing system

	# Non-default features:

	# Platform-specific:
	"wayland", # (Linux) Support Wayland windowing system

	# Development/Debug features:
	"dynamic_linking", # Dynamic linking for faster compile-times
] }

[[example]]
name = "bevy-chessboard"
path = "chessboard/chessboard.rs"

[[example]]
name = "tile-layers"
path = "tile-layers/tile-layers.rs"

[[example]]
name = "pillars"
path = "pillars/pillars.rs"

[[example]]
name = "canyon"
path = "canyon/canyon.rs"
