[package]
name = "bevy_ghx_proc_gen"
version = "0.1.0"
description = "Bevy plugin for 2D & 3D procedural generation with WFC/Model synthesis"
repository = "https://github.com/Henauxg/ghx_proc_gen"
documentation = "https://docs.rs/bevy_ghx_proc_gen"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = [
    "gamedev",
    "procedural-generation",
    "wfc",
    "model synthesis",
    "bevy",
]
categories = ["game-development", "algorithms"]
readme = "README.md"

[features]
default = [
    "default-assets-bundle-spawners",
    "simple-plugin",
    "debug-plugin",
    "grid-debug-plugin",
]
# Adds some default assets bundle spawners for basic types: Handle<Image>, Handle<Scene>, MaterialMesh and PbrMesh
default-assets-bundle-spawners = []
# Compiles the grid debug plugin and its systems
grid-debug-plugin = []
# Compiles the simple plugin and its systems
simple-plugin = []
# Compiles the debug plugin and its systems
debug-plugin = ["grid-debug-plugin"]


[dependencies]
ghx_proc_gen = { path = "../ghx_proc_gen", version = "0.1.0", features = [
    "bevy",
] }
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_asset",  # Assets management
    "bevy_pbr",    # 3D (physically-based) rendering
    "bevy_gizmos", # Support drawing debug lines and shapes
    "bevy_render", # Rendering framework core
] }
