[package]
name = "bevy_ghx_proc_gen"
version = "0.2.0-dev"
description = "Bevy plugins for 2D & 3D procedural generation with WFC/Model synthesis"
repository = "https://github.com/Henauxg/ghx_proc_gen"
documentation = "https://docs.rs/bevy_ghx_proc_gen"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "procedural-gen", "wfc", "algorithm", "bevy"]
categories = ["game-development", "algorithms"]

[features]
default = [
    "reflect",
    "grid-debug-plugin",
    "simple-plugin",
    "debug-plugin",
    "picking",
    "default-assets-bundle-spawners",
]
# Enables some reflect derives in ghx_proc_gen
reflect = ["ghx_proc_gen/reflect"]
# Compiles the grid debug plugin and its systems
grid-debug-plugin = [
    "bevy/bevy_gizmos", # Support drawing debug lines and shapes
]
# Compiles the simple plugin and its systems
simple-plugin = []
# Compiles the debug plugin and its systems
debug-plugin = ["grid-debug-plugin", "ghx_proc_gen/models-names"]
# Enables picking through bevy_mod_picking. Used by the debug-plugin if enabled.
picking = ["dep:bevy_mod_picking"]
# Adds some default assets bundle spawners for basic types: Handle<Image>, Handle<Scene>, MaterialMesh and PbrMesh
default-assets-bundle-spawners = [
    "bevy/bevy_scene",  # Scenes management
    "bevy/bevy_sprite", # 2D (sprites) rendering
    "bevy/bevy_pbr",    # 3D (physically-based) rendering
    "bevy/bevy_asset",  # Assets management
]

[dependencies]
ghx_proc_gen = { path = "../ghx_proc_gen", version = "0.2.0-dev", features = [
    "bevy",
] }
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_render", # Rendering framework core
] }

# Optional dependencies

# Only enabled when the "picking" feature is enabled
bevy_mod_picking = { version = "0.17.0", optional = true, default-features = false }
