[package]
name = "bevy_ghx_proc_gen"
version = "0.5.0"
description = "Bevy plugins for 2D & 3D procedural generation with WFC/Model synthesis"
repository = "https://github.com/Henauxg/ghx_proc_gen"
documentation = "https://docs.rs/bevy_ghx_proc_gen"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "procedural-gen", "wfc", "algorithm", "bevy"]
categories = ["game-development", "algorithms"]

[features]
default = [
    "reflect",
    "simple-plugin",
    "debug-plugin",
    "picking",
    "egui-edit",
    "default-bundle-inserters",
]
# Enables some reflect derives in ghx_proc_gen
reflect = ["ghx_proc_gen/reflect", "bevy_ghx_grid/reflect"]
# Compiles the simple plugin and its systems
simple-plugin = []
# Compiles the debug plugin and its systems
debug-plugin = [
    "ghx_proc_gen/models-names",
    "bevy_ghx_grid/debug-plugin",
    "bevy/bevy_ui",               # A custom ECS-driven UI framework

]
# Enables picking. Used by the debug-plugin if enabled.
picking = [
    "bevy/bevy_picking", # Provides picking functionality
]
# Enables an egui editor panel to inspect nodes and paint models
egui-edit = ["dep:bevy_egui", "picking"]
# Adds some default assets bundle spawners for basic types: Handle<Image>, Handle<Scene>, MaterialMesh and PbrMesh
default-bundle-inserters = [
    "bevy/bevy_scene",  # Scenes management
    "bevy/bevy_sprite", # 2D (sprites) rendering
    "bevy/bevy_pbr",    # 3D (physically-based) rendering
    "bevy/bevy_asset",  # Assets management
]

[dependencies]
# ----- Internal dependencies
ghx_proc_gen = { path = "../ghx_proc_gen", version = "0.6.0", features = [
    "bevy",
] }

# ----- External dependencies
bevy = { version = "0.16.0-rc.4", default-features = false, features = [
    "bevy_render", # Rendering framework core
] }

# ----- Optional dependencies
bevy_ghx_grid = { git = "https://github.com/Henauxg/bevy_ghx_grid.git", version = "0.6.0", optional = true, features = [
] }
# Only enabled when the "picking" feature is enabled
bevy_egui = { version = "0.34.0-rc.2", optional = true, default-features = false, features = [
    "default_fonts",
    "render",
] }
