[package]
name = "ghx_proc_gen"
version = "0.1.0"
description = "2D & 3D procedural generation with WFC/Model synthesis"
repository = "https://github.com/Henauxg/ghx_proc_gen"
documentation = "https://docs.rs/ghx_proc_gen"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = [
    "gamedev",
    "procedural-generation",
    "wfc",
    "model synthesis",
    "algorithm",
]
categories = ["game-development", "algorithms"]
readme = "../README.md"

[features]
# Enables some debug traces (via tracing)
debug-traces = []
bevy = ["dep:bevy"]

[dependencies]
bitvec = "1.0.1"
crossbeam-channel = "0.5.8"
ndarray = "0.15.6"
rand = "0.8.5"
thiserror = "1.0.50"
tracing = "0.1.40"

# Only enabled when the "bevy" feature is enabled
bevy = { version = "0.12.0", optional = true, default-features = false }
