[package]
name = "ghx_proc_gen"
version = "0.2.0-dev"
description = "2D & 3D procedural generation with WFC/Model synthesis"
repository = "https://github.com/Henauxg/ghx_proc_gen"
documentation = "https://docs.rs/ghx_proc_gen"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "procedural-gen", "wfc", "model-synthesis", "algorithm"]
categories = ["game-development", "algorithms"]
readme = "../README.md"

[features]
default = ["models-names"]
# Stores an optional name for each model
models-names = []
# Enables some debug traces (via tracing)
debug-traces = ["models-names"]
# Enables some Bevy trait derives
bevy = ["dep:bevy"]
# Enables more Bevy trait derives for reflection
reflect = ["bevy"]

[dependencies]
bitvec = "1.0.1"
crossbeam-channel = "0.5.8"
ndarray = "0.15.6"
rand = "0.8.5"
thiserror = "1.0.50"
tracing = "0.1.40"

# Optional dependencies

# Only enabled when the "bevy" feature is enabled
bevy = { version = "0.12.0", optional = true, default-features = false }
